change homepage url to github pages style

--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
   "bugs": {
     "url": "https://github.com/segunolalive/helloBooks/issues"
   },
-  "homepage": "https://github.com/segunolalive/helloBooks#readme"
+  "homepage": " https://segunolalive.github.io/helloBooks/templates/"
 }
