--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "hellobooks",
   "version": "1.0.0",
   "description": "A simple library app",
-  "main": "templates/index.js",
+  "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "babel server -d server/dist && nodemon server/dist/bin/www.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,11 @@
     "sequelize": "^4.4.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.0",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
@@ -37,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "mocha": "^3.5.0",
+    "supertest": "^3.0.0",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   }
