--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": " https://segunolalive.github.io/helloBooks/templates/",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
