--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "A simple library app",
   "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "rm -rf server/dist && babel server -d server/dist && nodemon server/dist/bin/www.js"
+    "start": "nodemon server/bin/www --exec babel-node",
+    "test": "mocha --watch --compilers js:babel-register server/test/**/*.spec.js",
+    "seed": "babel-node server/seeders/index.js",
+    "seedjoin": "babel-node server/seeders/borrowedBook.js",
+    "build": "babel server -d server/dist",
+    "serve": "node server/dist/bin/www.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,7 @@
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^7.4.2",
     "morgan": "^1.8.2",
     "pg": "^7.0.2",
@@ -38,7 +43,10 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "chai": "^4.1.0",
+    "chai-http": "^3.0.0",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
