configure miscellaneous files

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
   - "6"
 env:
   global:
-    - export NODE_ENV=development
+    - export NODE_ENV=test
 script:
   - npm test
+after_success:
+  - npm run coverage
