--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple library app",
   "main": "server/app.js",
   "scripts": {
-    "start": "nodemon server/bin/www --exec babel-node",
+    "start": "babel-node server/bin/www.js",
+    "start:dev": "nodemon server/bin/www --exec babel-node",
     "test": "mocha --watch --compilers js:babel-register server/test/**/*.spec.js",
     "seed": "babel-node server/seeders/index.js && exit 1",
     "seedjoin": "babel-node server/seeders/borrowedBook.js && exit 1",
