--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "morgan": "^1.8.2",
     "pg": "^7.0.2",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.4.2"
+    "sequelize": "^4.4.2",
+    "sequelize-cli": "^2.8.0"
   },
   "devDependencies": {
-
     "chai": "^4.1.0",
     "chai-http": "^3.0.0",
     "eslint": "^4.3.0",
