update production credentials

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ password=root
 database_dev=hellobooks
 database_test=hellobooksTest
 host=127.0.0.1
+DATABASE_URL=postgres://bqqcndgg:sFziUyi8b-5TV3B3KX8iAVTTn81PWTXJ@babar.elephantsql.com:5432/bqqcndgg
 dialect=postgres
