--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "babel-node server/bin/www.js",
     "start:dev": "nodemon server/bin/www --exec babel-node",
-    "test": "cross-env NODE_ENV=test mocha --watch --compilers js:babel-register server/test/**/*.spec.js",
-    "test:dev": "cross-env NODE_ENV=test mocha --compilers js:babel-register server/test/**/*.spec.js",
-    "seed": "cross-env NODE_ENV=test babel-node server/seeders/index.js && exit 0",
-    "seedjoin": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js && exit 0",
-    "seed:test": "cross-env NODE_ENV=test npm run seed & npm run seedjoin & npm run test:dev",
+    "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/index.js && exit 0",
+    "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js && exit 0",
+    "test:travis": "cross-env NODE_ENV=test mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
+    "test:dev": "cross-env NODE_ENV=test mocha --watch -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
+    "test": "cross-env NODE_ENV=test npm run seed:tables & npm run seed:join & npm run test:travis",
     "build": "babel server -d server/dist",
     "serve": "node server/dist/bin/www.js"
   },
