export database_url_test in taivs.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
 env:
   global:
     - export NODE_ENV=test
-    - DATABASE_URL_TEST=postgres://jmjbrcfp:FvHq4yiSgqDPdzPa0v1NzLITLEgee5NI@pellefant.db.elephantsql.com:5432/jmjbrcfp
+    - export DATABASE_URL_TEST=postgres://jmjbrcfp:FvHq4yiSgqDPdzPa0v1NzLITLEgee5NI@pellefant.db.elephantsql.com:5432/jmjbrcfp
 script:
   - npm test
