--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js && exit 0",
     "test:travis": "cross-env NODE_ENV=test mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "test:dev": "cross-env NODE_ENV=test mocha --watch -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
-    "test": "cross-env NODE_ENV=test npm run seed:tables & npm run seed:join & npm run test:travis",
-    "build": "babel server -d server/dist",
+    "test:build": "cross-env NODE_ENV=test & node dist/server/seeders/index.js & mocha -t 10000 dist/server/test/**/*.spec.js",
+    "pretest": "cross-env NODE_ENV=test npm run seed:tables",
+    "test": "cross-env NODE_ENV=test npm run seed:join & npm run test:travis",
+    "build": "babel server -d dist/server",
     "serve": "node server/dist/bin/www.js"
   },
   "engines": {
