--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test:travis": "cross-env NODE_ENV=test mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "test:dev": "cross-env NODE_ENV=test mocha --watch -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "test:build": "cross-env NODE_ENV=test & node dist/server/seeders/index.js & mocha -t 10000 dist/server/test/**/*.spec.js",
-    "pretest": "cross-env NODE_ENV=test npm run seed:tables",
-    "test": "cross-env NODE_ENV=test npm run seed:join & npm run test:travis",
+    "pretest": "cross-env NODE_ENV=test npm run seed:tables && npm run seed:join",
+    "test": "cross-env NODE_ENV=test npm run test:travis",
     "build": "babel server -d dist/server",
     "serve": "node server/dist/bin/www.js"
   },
