--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "start:dev": "nodemon server/bin/www --exec babel-node",
     "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/index.js && exit 0",
     "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js && exit 0",
-    "test:travis": "cross-env NODE_ENV=test mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
+    "test:travis": "cross-env NODE_ENV=test nyc mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "test:dev": "cross-env NODE_ENV=test mocha --watch -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "test:build": "cross-env NODE_ENV=test & node dist/server/seeders/index.js & mocha -t 10000 dist/server/test/**/*.spec.js",
     "pretest": "cross-env NODE_ENV=test npm run seed:tables",
     "test": "cross-env NODE_ENV=test npm run seed:join & npm run test:travis",
+    "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "build": "babel server -d dist/server",
     "serve": "node server/dist/bin/www.js"
+  },
+  "nyc": {
+    "exclude": [
+      "**/*.spec.js",
+      "dist"
+    ]
   },
   "engines": {
     "node": 6,
@@ -58,6 +65,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.0",
     "chai-http": "^3.0.0",
+    "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
@@ -65,6 +73,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "mocha": "^3.5.0",
+    "nyc": "^11.1.0",
     "supertest": "^3.0.0",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
