--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pretest": "sequelize db:migrate:undo:all --env test & sequelize db:migrate --env test & cross-env NODE_ENV=test npm run seed:tables",
     "test": "cross-env NODE_ENV=test npm run seed:join & npm run test:travis",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
-    "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/user.js & babel-node server/seeders/bookCategory.js & babel-node server/seeders/book.js",
+    "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
     "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js",
     "build": "babel server -d dist/server",
     "serve": "node server/dist/bin/www.js"
