--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "morgan": "^1.8.2",
     "pg": "^7.0.2",
     "pg-hstore": "^2.3.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "redux": "^3.7.2",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.8.0"
   },
