--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/app.js",
   "scripts": {
     "start": "babel-node server/bin/www.js",
+    "start:client": "webpack-dev-server --hot",
     "start:dev": "nodemon server/bin/www --exec babel-node",
     "test:travis": "cross-env NODE_ENV=test nyc mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "pretest": "sequelize db:migrate:undo:all --env test & sequelize db:migrate --env test & cross-env NODE_ENV=test npm run seed:tables",
@@ -49,23 +50,29 @@
     "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "css-loader": "^0.28.5",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "faker": "^4.1.0",
+    "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^7.4.2",
     "morgan": "^1.8.2",
     "pg": "^7.0.2",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-materialize": "^1.0.10",
+    "react-router-dom": "^4.2.0",
     "redux": "^3.7.2",
     "sequelize": "^4.4.2",
-    "sequelize-cli": "^2.8.0"
+    "sequelize-cli": "^2.8.0",
+    "style-loader": "^0.18.2"
   },
   "devDependencies": {
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.0",
-    "chai-http": "^3.0.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
     "eslint": "^4.3.0",
@@ -74,9 +81,11 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "mocha": "^3.5.0",
+    "node-sass": "^4.5.3",
     "nyc": "^11.1.0",
+    "sass-loader": "^6.0.6",
     "supertest": "^3.0.0",
-    "webpack": "^3.4.1",
+    "webpack": "^3.5.5",
     "webpack-dev-server": "^2.6.1"
   }
 }
