--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-materialize": "^1.0.10",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.0",
     "redux": "^3.7.2",
     "sequelize": "^4.4.2",
