--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
-    "bcrypt": "^1.0.2",
+    "bcrypt": "1.0.2",
     "body-parser": "^1.17.2",
     "css-loader": "^0.28.5",
     "dotenv": "^4.0.0",
