--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
     "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js",
     "build": "babel server -d dist/server",
-    "serve": "node server/dist/bin/www.js"
+    "serve": "node dist/server/bin/www.js"
   },
   "nyc": {
     "exclude": [
@@ -47,6 +47,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
@@ -75,8 +76,6 @@
     "style-loader": "^0.18.2"
   },
   "devDependencies": {
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
