--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple library app",
   "main": "server/app.js",
   "scripts": {
-    "start": "babel-node server/bin/www.js",
+    "serve": "babel-node server/bin/www.js",
     "start:client": "webpack-dev-server --hot",
     "start:dev": "nodemon server/bin/www --exec babel-node",
     "test:travis": "cross-env NODE_ENV=test nyc mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
@@ -13,8 +13,8 @@
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
     "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js",
-    "build": "babel server -d dist/server",
-    "serve": "node dist/server/bin/www.js"
+    "build": "rm -rf dist && babel server -d dist/server && webpack",
+    "start": "node dist/server/bin/www.js"
   },
   "nyc": {
     "exclude": [
@@ -45,6 +45,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -57,6 +58,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "faker": "^4.1.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^7.4.2",
     "morgan": "^1.8.2",
@@ -71,12 +73,14 @@
     "react-router-dom": "^4.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.8.0",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "chai": "^4.1.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
@@ -87,9 +91,7 @@
     "eslint-plugin-react": "^7.1.0",
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
-    "sass-loader": "^6.0.6",
     "supertest": "^3.0.0",
-    "webpack": "^3.5.5",
     "webpack-dev-server": "^2.6.1"
   }
 }
