--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
     "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js",
-    "build": "babel server -d dist/server",
-    "heroku-postbuild": "npm run build",
-    "start": "node dist/server/bin/www.js"
+    "build": "rm -rf dist && babel server -d dist/server && webpack",
+    "start": "node dist/server/bin/www.js",
+    "heroku-postbuild": "npm run build"
   },
   "nyc": {
     "exclude": [
@@ -59,6 +59,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "faker": "^4.1.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^7.4.2",
     "morgan": "^1.8.2",
@@ -73,9 +74,12 @@
     "react-router-dom": "^4.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.8.0",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5"
   },
   "devDependencies": {
     "chai": "^4.1.0",
@@ -88,9 +92,7 @@
     "eslint-plugin-react": "^7.1.0",
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
-    "sass-loader": "^6.0.6",
     "supertest": "^3.0.0",
-    "webpack": "^3.5.5",
     "webpack-dev-server": "^2.6.1"
   }
 }
