--- a/package.json
+++ b/package.json
@@ -79,9 +79,7 @@
     "sequelize-cli": "^2.8.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.5",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack": "^3.5.5"
   },
   "devDependencies": {
     "chai": "^4.1.0",
@@ -95,6 +93,8 @@
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
     "supertest": "^3.0.0",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
