--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server/app.js",
   "scripts": {
     "serve": "babel-node server/bin/www.js",
-    "start:client": "webpack-dev-server --hot",
+    "start:client": "webpack-dev-server --hot --config ./webpack.dev.config.js",
     "start:dev": "nodemon server/bin/www --exec babel-node",
     "test:travis": "cross-env NODE_ENV=test nyc mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && cross-env NODE_ENV=test npm run seed:tables",
