--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "jsonwebtoken": "^7.4.2",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
+    "npm": "^5.4.1",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
@@ -84,6 +85,7 @@
     "webpack": "^3.5.5"
   },
   "devDependencies": {
+    "babel-plugin-istanbul": "^4.1.4",
     "chai": "^4.1.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
@@ -92,11 +94,12 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
     "supertest": "^3.0.0",
-    "webpack-dev-server": "^2.6.1",
     "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.6.1",
     "webpack-hot-middleware": "^2.18.2"
   }
 }
