--- a/.eslintrc
+++ b/.eslintrc
@@ -18,9 +18,11 @@
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
+    "max-len": [1, 80, 2],
     "import/prefer-default-export": 0,
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
+    "import/extensions": "off",
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
