--- a/package.json
+++ b/package.json
@@ -51,26 +51,31 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "bcrypt": "1.0.2",
     "body-parser": "^1.17.2",
     "css-loader": "^0.28.5",
     "deepclonejs": "^1.0.3",
     "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.5.4",
     "express": "^4.15.3",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^7.4.2",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
+    "nodemailer": "^4.1.0",
     "npm": "^5.4.1",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-google-login": "^2.9.3",
+    "react-icons": "^2.2.5",
     "react-materialize": "^1.0.10",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.0",
@@ -86,6 +91,8 @@
   },
   "devDependencies": {
     "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
