--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,13 @@
     "ecmaVersion": 6,
     "ecmaFeatures": { "jsx": true }
   },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js",".jsx"]
+      }
+    }
+  },
   "rules": {
     "one-var": 0,
     "one-var-declaration-per-line": 0,
