chore(dependencies): add babel plugins for react-google-login

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,11 @@
   "plugins": ["transform-object-rest-spread"],
   "env": {
     "production": {
-      "plugins": ["transform-react-remove-prop-types"]
+      "plugins": [
+        "transform-react-remove-prop-types",
+        "transform-react-constant-elements",
+        "transform-react-inline-elements"
+      ]
     }
   }
 }
