--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple library app",
   "main": "dist/server/app.js",
   "scripts": {
+    "job": "babel-node server/cronjob",
+    "cron": "node dist/server/cronjob",
     "serve": "babel-node server/bin/www.js",
     "start": "node dist/server/bin/www.js",
     "start:client": "webpack-dev-server --hot --config ./webpack.dev.config.js",
@@ -86,7 +88,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "sequelize": "^4.4.2",
+    "sequelize": "^4.13.5",
     "sequelize-cli": "^2.8.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
