--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
     "express": "^4.15.3",
+    "express-validator": "^4.2.1",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
