feature(google-auth): signup unregistered users on google login

--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "description": "A simple library app",
   "main": "dist/server/app.js",
   "scripts": {
+    "job": "babel-node server/cronjob",
+    "cron": "node dist/server/cronjob",
     "serve": "babel-node server/bin/www.js",
     "start": "node dist/server/bin/www.js",
+    "start:debug": "node --inspect dist/server/bin/www.js",
     "start:client": "webpack-dev-server --hot --config ./webpack.dev.config.js",
     "start:dev": "nodemon server/bin/www --exec babel-node",
+    "start:dev:debug": "nodemon --inspect server/bin/www --exec babel-node",
     "start:server": "nodemon server/server --exec babel-node",
     "test:travis": "cross-env NODE_ENV=test nyc mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && cross-env NODE_ENV=test npm run seed:tables",
     "test": "cross-env NODE_ENV=test npm run seed:join && npm run test:travis",
+    "migrate:dev": "sequelize db:migrate:undo:all --env development && sequelize db:migrate --env development",
+    "migrate": "sequelize db:migrate:undo:all --env production && sequelize db:migrate --env production",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
     "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js",
-    "build": "rm -rf dist && babel server -d dist/server && webpack --config ./webpack.prod.config.js --progress --colors && cp client/sw.js dist/client",
+    "build": "rm -rf dist && babel server -d dist/server && webpack --config ./webpack.prod.config.js --progress --colors && babel client/sw.js -d dist",
     "heroku-postbuild": "npm run build"
   },
   "nyc": {
@@ -62,8 +68,10 @@
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
     "express": "^4.15.3",
+    "express-validator": "^4.2.1",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
+    "firebase": "^4.6.2",
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^7.4.2",
     "lodash": "^4.17.4",
@@ -86,7 +94,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "sequelize": "^4.4.2",
+    "sequelize": "^4.16.0",
     "sequelize-cli": "^2.8.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
