--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "cron": "node dist/server/cronjob",
     "serve": "babel-node server/bin/www.js",
     "start": "node dist/server/bin/www.js",
+    "start:inspect": "node --inspect dist/server/bin/www.js",
     "start:client": "webpack-dev-server --hot --config ./webpack.dev.config.js",
     "start:dev": "nodemon server/bin/www --exec babel-node",
+    "start:dev:inspect": "nodemon --inspect server/bin/www --exec babel-node",
     "start:server": "nodemon server/server --exec babel-node",
     "test:travis": "cross-env NODE_ENV=test nyc mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && cross-env NODE_ENV=test npm run seed:tables",
