feature(forgot-password): change response format

--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "job": "babel-node server/cronjob",
     "cron": "node dist/server/cronjob",
     "serve": "babel-node server/bin/www.js",
-    "start": "node dist/server/bin/www.js",
-    "start:inspect": "node --inspect dist/server/bin/www.js",
+    "start": "cross-env NODE_ENV=production node dist/server/bin/www.js",
+    "start:debug": "node --inspect dist/server/bin/www.js",
     "start:client": "webpack-dev-server --hot --config ./webpack.dev.config.js",
     "start:dev": "nodemon server/bin/www --exec babel-node",
-    "start:dev:inspect": "nodemon --inspect server/bin/www --exec babel-node",
+    "start:dev:debug": "nodemon --inspect server/bin/www --exec babel-node",
     "start:server": "nodemon server/server --exec babel-node",
     "test:travis": "cross-env NODE_ENV=test nyc mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && cross-env NODE_ENV=test npm run seed:tables",
     "test": "cross-env NODE_ENV=test npm run seed:join && npm run test:travis",
+    "migrate:dev": "sequelize db:migrate:undo:all --env development && sequelize db:migrate --env development",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
     "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js",
@@ -69,6 +70,7 @@
     "express-validator": "^4.2.1",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
+    "firebase": "^4.6.2",
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^7.4.2",
     "lodash": "^4.17.4",
