--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,7 @@
     "max-len": [1, 80, 2],
     "import/prefer-default-export": 0,
     "curly": ["error", "multi-line"],
-    "import/no-unresolved": [2, { "commonjs": true }],
+    "import/no-unresolved": "off",
     "import/extensions": "off",
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
     "react/jsx-uses-react": "error",
