feature(pagination): add client-side pagination for books

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nodemon server/bin/www --exec babel-node",
     "start:dev:debug": "nodemon --inspect server/bin/www --exec babel-node",
     "start:server": "nodemon server/server --exec babel-node",
-    "test:travis": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text --reporter=text-lcov mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
+    "test:travis": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && cross-env NODE_ENV=test npm run seed:tables",
     "test": "cross-env NODE_ENV=test npm run seed:join && npm run test:travis",
     "migrate:dev": "sequelize db:migrate:undo:all --env development && sequelize db:migrate --env development",
@@ -53,6 +53,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
@@ -87,6 +88,7 @@
     "react-dom": "^15.6.1",
     "react-google-login": "^2.9.3",
     "react-icons": "^2.2.5",
+    "react-infinite-scroller": "^1.1.1",
     "react-materialize": "^1.0.10",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.0",
