--- a/package.json
+++ b/package.json
@@ -68,16 +68,19 @@
     "deepclonejs": "^1.0.3",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
+    "enzyme": "^3.2.0",
     "express": "^4.15.3",
     "express-validator": "^4.2.1",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
     "firebase": "^4.6.2",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
     "jsonwebtoken": "^7.4.2",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
+    "moxios": "^0.4.0",
     "node-sass": "^4.5.3",
     "nodemailer": "^4.1.0",
     "npm": "^5.4.1",
@@ -98,6 +101,7 @@
     "sass-loader": "^6.0.6",
     "sequelize": "^4.16.0",
     "sequelize-cli": "^2.8.0",
+    "sinon": "^4.1.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
