--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
   "scripts": {
     "job": "babel-node server/cronjob",
     "cron": "node dist/server/cronjob",
-    "serve": "babel-node server/bin/www.js",
     "start": "node dist/server/bin/www.js",
     "start:debug": "node --inspect dist/server/bin/www.js",
     "start:client": "webpack-dev-server --hot --config ./webpack.dev.config.js",
-    "start:dev": "nodemon server/bin/www --exec babel-node",
-    "start:dev:debug": "nodemon --inspect server/bin/www --exec babel-node",
-    "start:server": "nodemon server/server --exec babel-node",
-    "test:travis": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
-    "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && cross-env NODE_ENV=test npm run seed:tables",
-    "test": "cross-env NODE_ENV=test npm run seed:join && npm run test:travis",
+    "start:server": "nodemon server/bin/www --exec babel-node",
+    "start:server:debug": "nodemon --inspect server/bin/www --exec babel-node",
+    "test": "cross-env NODE_ENV=test npm run seed:join:test && cross-env NODE_ENV=test && npm run test:server && npm run test:client",
+    "pretest": "npm run migrate:test && cross-env NODE_ENV=test npm run seed:tables:test",
+    "migrate:test": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test",
+    "seed:tables:test": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
+    "seed:join:test": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js",
+    "travis": "cross-env NODE_ENV=travis npm run seed:join:travis && npm run test:server && npm run test:client",
+    "pretravis": "npm run migrate:travis && cross-env NODE_ENV=travis npm run seed:tables:travis",
+    "migrate:travis": "sequelize db:migrate:undo:all --env travis && sequelize db:migrate --env travis",
+    "seed:tables:travis": "cross-env NODE_ENV=travis babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
+    "seed:join:travis": "cross-env NODE_ENV=travis babel-node server/seeders/borrowedBook.js",
     "migrate:dev": "sequelize db:migrate:undo:all --env development && sequelize db:migrate --env development",
+    "seed:join:dev": "cross-env NODE_ENV=development babel-node server/seeders/borrowedBook.js",
+    "seed:tables:dev": "cross-env NODE_ENV=development babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
     "migrate": "sequelize db:migrate:undo:all --env production && sequelize db:migrate --env production",
-    "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
-    "seed:tables": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
-    "seed:join": "cross-env NODE_ENV=test babel-node server/seeders/borrowedBook.js",
-    "build": "rm -rf dist && babel server -d dist/server && webpack --config ./webpack.prod.config.js --progress --colors && cp client/sw.js dist/client && cp client/manifest.json dist/client",
+    "seed:tables": "cross-env NODE_ENV=production babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
+    "seed:join": "cross-env NODE_ENV=production babel-node server/seeders/borrowedBook.js",
+    "test:client": "jest /client --coverage",
+    "test:server": "nyc --reporter=html --reporter=text mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
+    "coverage": "NODE_ENV=travis nyc report --reporter=text-lcov | coveralls",
+    "build": "rm -rf dist && babel server -d dist/server && webpack --config ./webpack.prod.config.js --progress --colors && babel client/sw.js -d dist/ && cp client/manifest.json dist/client",
     "heroku-postbuild": "npm run build"
   },
   "nyc": {
@@ -58,7 +67,7 @@
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
@@ -68,26 +77,24 @@
     "deepclonejs": "^1.0.3",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
-    "enzyme": "^3.2.0",
     "express": "^4.15.3",
     "express-validator": "^4.2.1",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
     "firebase": "^4.6.2",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^21.2.1",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.2",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
-    "moxios": "^0.4.0",
     "node-sass": "^4.5.3",
     "nodemailer": "^4.1.0",
     "npm": "^5.4.1",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
     "react-dom": "^15.6.1",
     "react-google-login": "^2.9.3",
     "react-icons": "^2.2.5",
@@ -101,26 +108,33 @@
     "sass-loader": "^6.0.6",
     "sequelize": "^4.16.0",
     "sequelize-cli": "^2.8.0",
-    "sinon": "^4.1.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
   },
   "devDependencies": {
+    "babel-jest": "^21.2.0",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "istanbul": "^0.4.5",
+    "jest": "^21.2.1",
     "mocha": "^3.5.0",
+    "moxios": "^0.4.0",
     "nyc": "^11.1.0",
+    "react-test-renderer": "^15.6.2",
+    "redux-mock-store": "^1.3.0",
+    "sinon": "^4.1.2",
     "supertest": "^3.0.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.6.1",
