--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["env", "react"],
+  "presets": ["stage-2", "env", "react"],
   "plugins": ["transform-object-rest-spread"],
   "env": {
     "production": {
