--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.2",
-    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
@@ -109,6 +108,7 @@
     "sequelize": "^4.16.0",
     "sequelize-cli": "^2.8.0",
     "style-loader": "^0.18.2",
+    "superagent": "^3.8.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
   },
