chore(tests): add e2e tests

--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "seed:tables": "cross-env NODE_ENV=production babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
     "seed:join": "cross-env NODE_ENV=production babel-node server/seeders/borrowedBook.js",
     "test:client": "jest /client --coverage",
-    "pretest:server": "npm run migrate:test && NODE_ENV=test npm run seed:tables:test",
-    "test:server": "NODE_ENV=test npm run seed:join:test && NODE_ENV=test nyc --reporter=html --reporter=text mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
+    "pretest:server": "npm run migrate:test && NODE_ENV=test npm run seed:tables:test && NODE_ENV=test npm run seed:join:test",
+    "test:server": "NODE_ENV=test nyc --reporter=html --reporter=text mocha -t 5000 --compilers js:babel-register server/test/**/*.spec.js",
     "build": "rm -rf dist && babel server -d dist/server && webpack --config ./webpack.prod.config.js --progress --colors && babel client/sw.js -d dist/ && cp client/manifest.json dist/client && npm run copy:docs",
-    "copy:docs":"cp server/docs/index.html dist/server/docs && cp -r server/docs/stylesheets dist/server/docs/stylesheets && cp -r server/docs/images dist/server/docs/images && cp -r server/docs/fonts dist/server/docs/fonts",
-    "heroku-postbuild": "npm run build"
+    "copy:docs": "cp server/docs/index.html dist/server/docs && cp -r server/docs/stylesheets dist/server/docs/stylesheets && cp -r server/docs/images dist/server/docs/images && cp -r server/docs/fonts dist/server/docs/fonts",
+    "heroku-postbuild": "npm run build",
+    "e2e-setup": "selenium-standalone install",
+    "e2e-server": "selenium-standalone start",
+    "start:server:e2e": "NODE_ENV=test nodemon server/bin/www --exec babel-node",
+    "pretest:e2e": "npm run migrate:dev && npm run seed:tables:dev &&  npm run seed:join:dev",
+    "test:e2e": "nightwatch"
   },
   "nyc": {
     "exclude": [
@@ -81,13 +86,14 @@
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.2",
+    "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
     "nodemailer": "^4.1.0",
     "npm": "^5.4.1",
-    "pg": "^7.3.0",
+    "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.2",
@@ -130,6 +136,7 @@
     "nyc": "^11.1.0",
     "react-test-renderer": "^15.6.2",
     "redux-mock-store": "^1.3.0",
+    "selenium-standalone": "^6.11.0",
     "sinon": "^4.1.2",
     "sinon-express-mock": "^1.3.1",
     "supertest": "^3.0.0",
