--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,8 @@
       "plugins": [
         "transform-react-remove-prop-types",
         "transform-react-constant-elements",
-        "transform-react-inline-elements"
+        "transform-react-inline-elements",
+        "add-module-exports"
       ]
     }
   }
