--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "node": true,
     "es6": true,
     "mocha": true,
-    "jest": true,
+    "jest": true
   },
   "parserOptions": {
     "ecmaVersion": 6,
