--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:client": "webpack-dev-server --hot --config ./webpack.dev.config.js",
     "start:server": "nodemon server/bin/www --exec babel-node",
     "start:server:debug": "nodemon --inspect server/bin/www --exec babel-node",
+    "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "test": "npm run test:server && npm run test:client",
     "migrate:test": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test",
     "seed:tables:test": "cross-env NODE_ENV=test babel-node server/seeders/user.js && babel-node server/seeders/bookCategory.js && babel-node server/seeders/book.js",
@@ -61,6 +62,7 @@
     "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
