--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["stage-2", "env", "react"],
-  "plugins": ["transform-object-rest-spread"],
+  "plugins": ["transform-object-rest-spread", "transform-class-properties"],
   "env": {
     "production": {
       "plugins": [
