--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ node_js:
 env:
   global:
     - export NODE_ENV=test
+before_script:
+  - npm install -g codeclimate-test-reporter
 script:
   - npm test
 after_success:
+  - codeclimate-test-reporter < coverage/lcov.info
   - npm run coverage
